[package]
name = "constraint-hamiltonian"
version = "0.1.0"
edition = "2021"
description = "Hamiltonian constraint systems on graphs with symplectic integration"
license = "MIT"
repository = "https://github.com/SuperInstance/constraint-hamiltonian"
keywords = ["hamiltonian", "symplectic", "constraint", "physics", "verlet"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
